--- a/src/main/resources/assets/jade/lang/it_it.json
+++ b/src/main/resources/assets/jade/lang/it_it.json
@@ -2,24 +2,24 @@
 	"tooltip.jade.crop_growth": "Crescita: %s",
 	"tooltip.jade.crop_mature": "Maturo",
 	"tooltip.jade.empty": "Chiuso",
-	"tooltip.jade.delay": "Delay: %d",
+	"tooltip.jade.delay": "Ritardo: %d",
 	"tooltip.jade.mode": "Modalità: %s",
 	"tooltip.jade.mode_comparator": "Comparatore",
 	"tooltip.jade.mode_subtractor": "Sottrattore",
 	"tooltip.jade.state": "Stato: %s",
-	"tooltip.jade.state_on": "On",
-	"tooltip.jade.state_off": "Off",
+	"tooltip.jade.state_on": "Acceso",
+	"tooltip.jade.state_off": "Spento",
 	"tooltip.jade.power": "Energia: %d",
 	"tooltip.jade.villager_profession": "Professione: %s",
 	"gui.jade.plugin_settings": "Impostazioni plug-in",
 	"gui.jade.translated_by": "placeholder %s",
 	"gui.jade.translators": "simcosmico",
-	"key.jade.config": "Apri config",
+	"key.jade.config": "Apri configurazioni",
 	"key.jade.show_overlay": "Mostra overlay",
-	"key.jade.toggle_liquid": "Toggle liquidi",
+	"key.jade.toggle_liquid": "Rimuovi liquidi",
 	"key.jade.show_details": "Mostra dettagli",
 	"key.jade.show_recipes": "Mostra ricette",
-	"key.jade.show_uses": "Mostra usi",
+	"key.jade.show_uses": "Mostra utilizzi",
 	"config.jade.general": "Generale",
 	"config.jade.display_tooltip": "Visualizza tooltip",
 	"config.jade.display_tooltip_desc": "Raccogli dati e rendi il tooltip",
@@ -27,13 +27,13 @@
 	"config.jade.display_blocks": "Visualizza blocchi",
 	"config.jade.display_fluids": "Visualizza fluidi",
 	"config.jade.display_fluids_desc": "Prova a visualizzare fluidi",
-	"config.jade.display_fluids_source_only": "Source Only",
+	"config.jade.display_fluids_source_only": "Solo fonte",
 	"config.jade.display_fluids_any": "Qualunque",
 	"config.jade.display_fluids_none": "Nessuno",
 	"config.jade.display_mode": "Modalità di visualizzazione",
 	"config.jade.hide_from_debug": "Nascondi dal debug",
 	"config.jade.hide_from_debug_desc": "Nascondi il tooltip mentre il menu di debug è aperto",
-	"config.jade.display_item": "Display Item",
+	"config.jade.display_item": "Mostra l'oggetto",
 	"config.jade.display_item_hide": "Nascondi",
 	"config.jade.display_item_top": "Sopra",
 	"config.jade.display_item_centered": "Centrato",
@@ -48,7 +48,7 @@
 	"config.jade.plugin_jade.registry_name": "Nome del registro di sistema",
 	"config.jade.plugin_minecraft.entity_health": "Salute dell'entita",
 	"config.jade.plugin_minecraft.entity_armor": "Armatura dell'entità",
-	"config.jade.plugin_jade.block_states": "Block States",
+	"config.jade.plugin_jade.block_states": "Stato dei blocchi",
 	"config.jade.plugin_jade.item_mod_name": "Nome della mod nel tooltip dell'oggetto",
 	"config.jade.plugin_jade.mod_name": "Nome della mod",
 	"entity.minecraft.villager.none": "Disoccupato",
@@ -62,7 +62,7 @@
 	"config.jade.plugin_minecraft.item_frame": "Cornice",
 	"jade.llamaStrength": "Forza: %s",
 	"config.jade.plugin_minecraft.mob_growth": "Crescità mob",
-	"jade.mobgrowth.time": "Tempo di crescità: %s",
+	"jade.mobgrowth.time": "Tempo di crescita: %s",
 	"config.jade.plugin_minecraft.mob_breeding": "Allevamento di mob",
 	"jade.mobbreeding.time": "Allevamento CD: %s",
 	"config.jade.plugin_minecraft.brewing_stand": "Alambicco",
@@ -73,10 +73,10 @@
 	"jade.beehive.bees": "Api: %s",
 	"jade.beehive.honey": "Miele: %s",
 	"config.jade.plugin_minecraft.note_block": "Blocco sonoro",
-	"jade.instrument.bass": "Basso (Contrabbasso)",
+	"jade.instrument.bass": "Basso (contrabbasso)",
 	"jade.instrument.snare": "Rullante",
 	"jade.instrument.hat": "Clic e bastoni",
-	"jade.instrument.basedrum": "Grancassa (Kick)",
+	"jade.instrument.basedrum": "Grancassa (colpo)",
 	"jade.instrument.bell": "Campane (Glockenspiel)",
 	"jade.instrument.flute": "Flauto",
 	"jade.instrument.chime": "Carillon di vento",
@@ -97,7 +97,7 @@
 	"config.jade.plugin_minecraft.harvest_tool": "Attrezzo mietitura",
 	"config.jade.plugin_minecraft.harvest_tool.new_line": "Attrezzo nella nuova linea",
 	"config.jade.plugin_minecraft.harvest_tool.effective_tool": "Attrezzo efficace",
-	"jade.harvest_tool.unbreakable": "Non può rompere",
+	"jade.harvest_tool.unbreakable": "Non rompibile",
 	"config.jade.plugin_minecraft.enchantment_power": "Potenza dell'incantesimo",
 	"config.jade.plugin_minecraft.total_enchantment_power": "Totale potenza dell'incantesimo",
 	"jade.ench_power": "Potenza dell'incantesimo: %s",
@@ -109,7 +109,7 @@
 	"jade.fluid": "%s %s",
 	"jade.fluid.empty": "Vuoto",
 	"config.jade.plugin_minecraft.lectern": "Leggio",
-	"config.jade.plugin_minecraft.animal_owner": "Proprietario/a di animali",
+	"config.jade.plugin_minecraft.animal_owner": "Proprietario/a dell'animale",
 	"jade.owner": "Proprietario/a: %s",
 	"config.jade.plugin_minecraft.furnace": "Contenuti fornace",
 	"config.jade.plugin_minecraft.mob_spawner": "Tipo di generatore",
